--- a/lab1/style.css
+++ b/lab1/style.css
@@ -17,6 +17,8 @@
   font-size: 50px;
   color: #2E2E2E;
   margin-bottom: 20px;
+  margin-top: 82px;
+  letter-spacing: 2px;
 }
 
 .image{
@@ -25,14 +27,14 @@
 }
 
 .text{
-  margin: auto;
+  margin: 0 auto 50px;
   width: 960px;
   font-family: "Oxygen", serif;
   font-size: 24px;
-  margin-top: 140px;
-  margin-bottom: 135px;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+.article {
+  margin-bottom: 150px;
 }
 
 .link-header{
@@ -52,7 +54,7 @@
 }
 
 .site-footer {
-  background-image: url("photo.jpg");
+  background-image: url("images/photo.jpg");
   background-size: 100%;
   height: 89px;
 }
@@ -61,19 +63,12 @@
   fill: #ffffff;
 }
 
-
-.container {
-  width: 510px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .site-header {
   height: 74px;
   width: 100%;
 }
 
-.section-header {
+.div-header {
   display: flex;
   align-items: center;
   height: 100%;
@@ -96,10 +91,9 @@
 }
 
 
-.section-footer {
+.div-footer {
   display: flex;
   align-items: center;
-  /*height: 100%;*/
 }
 
 .nav-footer {
